fix overflow

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -8,7 +8,7 @@
   align-items: center;
   object-fit: contain;
   word-spacing: 3px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .hero-image {
